--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <ul class="header__menu">
                 <li><a href="#home" class="header__link">Home</a></li>
                 <li><a href="#lessons" class="header__link">Lessons</a></li>
-                <li><a href="#about" class="header__link">About</a></li>
-                <li><a href="#contact.html" class="header__link">Contact</a></li>
+                <li><a href="#course" class="header__link">Courses</a></li>
+                <li><a href="mailto:yahyaguirnaoui@gmail.com?subject=Contact&body=Bonjour,%0AJe souhaite vous contacter."
+                        class="header__link">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -55,16 +56,16 @@
     <section class="section" id="lessons">
         <div class="container">
             <h2 class="section__title">Courses Lessons</h2>
-            <p class="section__subtitle">Experience personalized surf coaching, expert surf guiding, and unforgettable
-                ocean adventures tailored to every level. Whether you’re a beginner catching your first waves or an
-                advanced surfer refining technique and performance, each session is designed to help you grow with
-                confidence and style.
-
+            <p class="section__subtitle">
+                Experience personalized surf coaching, expert surf guiding, and unforgettable ocean adventures tailored
+                to every level. Whether you’re a beginner catching your first waves or an advanced surfer refining
+                technique and performance, each session is designed to help you grow with confidence and style.<br>
                 Based in Morocco, Taha Surf Coaching blends deep local knowledge, high-level surfing expertise, and a
                 positive, motivating coaching approach. The goal is simple: help you surf with confidence, flow, and
-                power—while fully enjoying the magic of the ocean.</p>
+                power—while fully enjoying the magic of the ocean.
+            </p>
 
-            <div class="lessons-grid">
+            <div class="lessons-grid" id="course">
                 <!-- Course 1 -->
                 <div class="card fade-in">
                     <img src="asset/images/surf4.jpeg" class="card__image">
@@ -104,16 +105,73 @@
 
                     </div>
                 </div>
-            
-            <div class="card fade-in"><img src="asset/images/surf4.jpeg" class="card__image"></div>
-            <div class="card fade-in"><img src="asset/images/surf.3jpeg.jpeg " class="card__image"></div>
-            <div class="card fade-in"><img src="asset/images/surf5.jpeg" class="card__image"></div>
-            
-</div>
+            </div>
     </section>
+    <section class="hero-section" id="heroSection" class="body_section">
+        <div class="content-wrapper">
+            <!-- Slide 1 -->
+            <div class="slide-content active" data-slide="0">
+                <h1>Private Surf Lesson</h1>
 
+                <p class="testimonial-text">
+                    My son had an awesome surfing experience. Hugo, his coach, was outstanding!<br>
+                    He was professional, caring, and very experienced. The staff was also great, and<br>
+                    the photographer was the best. Thank you so much! Highly recommended!
+                </p>
 
+                <div class="stars">
+                    <span class="star">★</span><span class="star">★</span><span class="star">★</span><span
+                        class="star">★</span><span class="star">★</span>
+                </div>
 
+                <p class="author">Peter S. | TripAdvisor</p>
+            </div>
+
+            <!-- Slide 2 -->
+            <div class="slide-content" data-slide="1">
+                <h1>Group Surf Sessions</h1>
+
+                <p class="testimonial-text">
+                    Amazing experience with friends! The instructors were patient and knowledgeable.<br>
+                    We all managed to stand up on our boards by the end of the session.<br>
+                    The beach location was perfect and the equipment was top quality. Will definitely return!
+                </p>
+
+                <div class="stars">
+                    <span class="star">★</span><span class="star">★</span><span class="star">★</span><span
+                        class="star">★</span><span class="star">★</span>
+                </div>
+
+                <p class="author">Sarah M. | Google Reviews</p>
+            </div>
+
+            <!-- Slide 3 -->
+            <div class="slide-content" data-slide="2">
+                <h1>Amusant Time</h1>
+
+                <p class="testimonial-text">
+                    My daughter had an amazing time! Every day was filled with laughter, fun, and exciting
+                    activities.
+                    The coaches made sure learning new skills was playful and safe.<br>
+                    She’s already talking about coming back for more adventures next summer!<br>
+                    Wonderful memories and priceless smiles – thank you to the whole team!
+                </p>
+
+                <div class="stars">
+                    <span class="star">★</span><span class="star">★</span><span class="star">★</span><span
+                        class="star">★</span><span class="star">★</span>
+                </div>
+
+                <p class="author">Jennifer L. | Yelp</p>
+            </div>
+        </div>
+
+        <div class="dots">
+            <div class="dot active" data-index="0"></div>
+            <div class="dot" data-index="1"></div>
+            <div class="dot" data-index="2"></div>
+        </div>
+    </section>
     <div class="video-gallery">
 
         <!-- VIDEO 1 -->
