--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#home" class="header__link">Home</a></li>
                 <li><a href="#lessons" class="header__link">Lessons</a></li>
                 <li><a href="#course" class="header__link">Courses</a></li>
-                <li><a href="mailto:yahyaguirnaoui@gmail.com?subject=Contact&body=Bonjour,%0AJe souhaite vous contacter."
+                <li><a href="mailto:ytahachaabi33@gmail.com?subject=Contact&body=Bonjour,%0AJe souhaite vous contacter."
                         class="header__link">Contact</a></li>
             </ul>
         </nav>
@@ -47,7 +47,7 @@
             <div class="hero__content">
                 <h1 class="hero__title">SURF LESSONS IN TAGHAZOUT AND TAMRAGHT</h1>
                 <p class="hero__subtitle">Learn, grow, and achieve your goals with our expert courses</p>
-                <a href="mailto:yahyaguirnaoui@gmail.com?subject=Contact&body=Bonjour,%0AJe souhaite vous contacter. "
+                <a href="mailto:tahachaabi33@gmail.com?subject=Contact&body=Bonjour,%0AJe souhaite vous contacter. "
                     class="contact-btn">Contact Me</a>
             </div>
         </div>
@@ -219,7 +219,7 @@
                     <a href="https://www.instagram.com/taha_surf_coach?igsh=NGxqbzhtNW5ubHBs" class="social-icon">
                         <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
                     </a>
-                    <a href="mailto:yahyaguirnaoui@gmail.com?subject=Contact&body=Bonjour,%0AJe souhaite vous contacter."
+                    <a href="mailto:tahachaabi33@gmail.com?subject=Contact&body=Bonjour,%0AJe souhaite vous contacter."
                         class="social-icon">
                         <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email">
                     </a>
