Update homepage content

--- a/index.html
+++ b/index.html
@@ -69,14 +69,20 @@
                 <!-- Course 1 -->
                 <div class="card fade-in">
                     <img src="asset/images/surf4.jpeg" class="card__image">
-                    <div class="card__body">
-                        <h3 class="card__title">Beginner</h3>
+                      <div class="card__body">
+                        <div class="card__header">
+                            <h3 class="card__title">Beginner</h3>
+                            <div class="card__price">400 DH</div>
+                        </div>
                         <ul class="card__text">
                             <li>2-hour surf lessons</li>
                             <li>Surfboard and wetsuit included</li>
                             <li>Small group: 1–6 people</li>
                             <li>Private lessons available (1–2 people)</li>
                         </ul>
+                        <div class="private-lesson">
+                            <p class="private-lesson-text">Private lessons available (1–2 people): 600 DH</p>
+                        </div>
                     </div>
                 </div>
 
@@ -84,7 +90,10 @@
                 <div class="card fade-in">
                     <img src="asset/images/intermediatesurf.jpeg" class="card__image">
                     <div class="card__body">
-                        <h3 class="card__title">Intermediate / Semi-private </h3>
+                        <div class="card__header">
+                            <h3 class="card__title">Intermediate / Semi-private</h3>
+                            <div class="card__price">500 DH</div>
+                        </div>
                         <ul class="card__text">
                             <li>2-hour surf lessons</li>
                             <li>Video analysis for faster progression</li>
@@ -96,15 +105,17 @@
                 <div class="card fade-in">
                     <img src="asset/images/surf1.jpeg" class="card__image">
                     <div class="card__body">
-                        <h3 class="card__title">Advanced</h3>
+                      <div class="card__header">
+                            <h3 class="card__title">Advanced</h3>
+                            <div class="card__price">800 DH</div>
+                        </div>
                         <ul class="card__text">
                             <li>2-hour surf coaching sessions</li>
                             <li>In-depth video analysis and feedback</li>
                             <li>Surfing a variety of spots based on conditions</li>
                         </ul>
-
+                       </div>
                     </div>
-                </div>
             </div>
     </section>
     <section class="hero-section" id="heroSection" class="body_section">
