Update homepage content

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="slider">
-            <video src="asset/images/surf.mp4" autoplay muted loop playsinline>
-            </video>
+           <video autoplay muted loop playsinline>
+  <source src="asset/images/surf-compressed.mp4" type="video/mp4">
+</video>
 
             <!-- Hero content over slider -->
             <div class="hero__content">
@@ -78,7 +79,6 @@
                             <li>2-hour surf lessons</li>
                             <li>Surfboard and wetsuit included</li>
                             <li>Small group: 1–6 people</li>
-                            <li>Private lessons available (1–2 people)</li>
                         </ul>
                         <div class="private-lesson">
                             <p class="private-lesson-text">Private lessons available (1–2 people): 600 DH</p>
