--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="lessons-grid" id="course">
                 <!-- Course 1 -->
                 <div class="card fade-in">
-                    <img src="asset/images/surf4.jpeg" class="card__image">
+                    <img src="asset/images/surf4.jpeg" class="card__image" loading="lazy">
                       <div class="card__body">
                         <div class="card__header">
                             <h3 class="card__title">Beginner</h3>
@@ -88,7 +88,7 @@
 
                 <!-- Course 2 -->
                 <div class="card fade-in">
-                    <img src="asset/images/intermediatesurf.jpeg" class="card__image">
+                    <img src="asset/images/surf3.jpeg" class="card__image" loading="lazy">
                     <div class="card__body">
                         <div class="card__header">
                             <h3 class="card__title">Intermediate / Semi-private</h3>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="card fade-in">
-                    <img src="asset/images/surf1.jpeg" class="card__image">
+                    <img src="asset/images/surf1.jpeg" class="card__image" loading="lazy">
                     <div class="card__body">
                       <div class="card__header">
                             <h3 class="card__title">Advanced</h3>
