Update homepage content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="geo.region" content="MA">
+    <meta name="geo.placename" content="Morocco">
+    <meta name="language" content="en">
     <title>Taha Surf Coach</title>
     <link rel="stylesheet" href="asset/styles.css">
     <!-- Font Awesome -->
@@ -88,7 +91,7 @@
 
                 <!-- Course 2 -->
                 <div class="card fade-in">
-                    <img src="asset/images/surf3.jpeg" class="card__image" loading="lazy">
+                    <img src="asset/images/intermediatesurf.jpeg" class="card__image" loading="lazy">
                     <div class="card__body">
                         <div class="card__header">
                             <h3 class="card__title">Intermediate / Semi-private</h3>
